# wiz-like

./: .gitignore  CMakeLists.txt
assets/font/: misaki_gothic_2nd.fnt  modern_dos.fnt  unscii.fnt
src/: CMakeLists.txt  SDL_stb_image.hpp  application.hpp  console.hpp  font.hpp  main.cpp  util.hpp
